--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
@@ -11,9 +12,15 @@
   "description": "",
   "dependencies": {
     "@google-cloud/speech": "^6.7.0",
+    "@google/generative-ai": "^0.21.0",
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "form-data": "^4.0.1",
+    "fs": "^0.0.1-security",
+    "gemini-api": "^2.0.4",
     "multer": "^1.4.5-lts.1",
-    "stream": "^0.0.3"
+    "stream": "^0.0.3",
+    "uuid": "^11.0.3"
   }
 }
